cmake_minimum_required(VERSION 3.29)
project(Attavaliativa C)

set(CMAKE_C_STANDARD 11)

# Cria executáveis separados para cada arquivo .c
add_executable(att01 att01.c)
add_executable(att02 att02.c)
add_executable(att3 att3.c)
add_executable(att4 att4.c)
add_executable(att5 att5.c)
add_executable(att6 att6.c)
add_executable(att7 att7.c)
add_executable(att8 att8.c)
add_executable(att9 att9.c)
add_executable(att10 att10.c)
